# PaperGym

./: .env.examples  .gitignore  LICENSE  README.md  pyproject.toml  research.md
data/: queries.yaml
data/events/: 1702.08272.jsonl  1703.01049.jsonl  1703.06907.jsonl  1703.10025.jsonl  1704.03152.jsonl  1707.02786.jsonl  1708.04225.jsonl  1708.04686.jsonl  1709.04093.jsonl  1710.09483.jsonl  1711.02768.jsonl  1712.00527.jsonl  1712.00579.jsonl  1801.01750.jsonl  1802.06891.jsonl  1802.10153.jsonl  1803.08660.jsonl  1803.08896.jsonl  1803.09956.jsonl  1804.05312.jsonl  1805.04770.jsonl  1808.01842.jsonl  1809.04938.jsonl  1811.01802.jsonl  1811.08086.jsonl  1812.06398.jsonl  1812.06587.jsonl  1902.00087.jsonl  1903.01066.jsonl  1903.04053.jsonl  1903.08693.jsonl  1904.07723.jsonl  1904.10151.jsonl  1905.10668.jsonl  1906.00067.jsonl  1906.02416.jsonl  1907.10156.jsonl  1908.06066.jsonl  1909.02119.jsonl  1909.02244.jsonl  (+406 more)
data/papers_cache/: README.md
docker/: Dockerfile  Dockerfile.exec
docs/: 2026-04-27-paper-as-environment.md  REPRODUCE.md
eval/: __init__.py  common.py
papergym_notool/: .env.examples  .gitignore  README.md
scripts/: accumulate_one.py  build_image.sh  check_executability.py  coherence_pairwise_eval.py  coherence_per_condition_eval.py  fetch_si_ideas.py  ideation_eval.py  ideation_layers_eval.py  inspired_by_grounding_eval.py  loop_benchmark.py  preconvert_papers.py  prefetch_datasets.py  reproduce_paper.sh  retrieval_eval.py  run_accumulator.py  run_execution_gym.py  run_synthesis.py  sample_envs.py  seed_quality_eval.py  seed_shuffled.py
(+954 files in other folders)
