[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "papergym"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "litellm>=1.40",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "requests>=2.31",
    "arxiv>=2.1",
    "pymupdf4llm>=0.0.17",
    "docling>=2.0",
    "tenacity>=8.2",
    "gdown>=5.0",
    "datasets>=2.18",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.12", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"papergym.agents.accumulator" = ["*.yaml"]
"papergym.agents.paraphraser" = ["*.yaml"]
"papergym.agents.synthesizer" = ["*.yaml"]
"papergym.execution" = ["prompts/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
